--- a/config.toml
+++ b/config.toml
@@ -82,14 +82,14 @@ bgcolor = "#ffffff"
 
     # Topics
     [Languages.en.params.topics]
-      title = "What we are, and what we do"
+      title = "Who we are, and what we do"
 
     # call to action
     [Languages.en.params.cta]
       enable = true
       title = "Didn't find an answer to your question?"
       description = "Ask the question on the PowerShell #DSC channel where you'll be able to find us!"
-      btnText = "join the conversation"
+      btnText = "Join the Conversation"
       btnURL = "community/contact/"
 
     # contact
