adding build tasks to azdo

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -6,14 +6,24 @@
 trigger:
 - master
 
+pr:
+  autoCancel: true
+
 pool:
   vmImage: 'ubuntu-latest'
 
 steps:
-- script: echo Hello, world!
-  displayName: 'Run a one-line script'
 
-- script: |
-    echo Add other tasks to build, test, and deploy your project.
-    echo See https://aka.ms/yaml
-  displayName: 'Run a multi-line script'
+- checkout: self
+  displayName: 'Checkout repository'
+
+- task: HugoTask@1
+  displayName: 'Generate Hugo site'
+  inputs:
+    destination: '$(Build.ArtifactStagingDirectory)'
+
+- task: PublishPipelineArtifact@0
+  displayName: 'Publish Hugo site as artifact'
+  inputs:
+    artifactName: 'dsccommunity'
+    targetPath: '$(Build.ArtifactStagingDirectory)'
