--- a/data/en/faq.yml
+++ b/data/en/faq.yml
@@ -8,6 +8,16 @@ faqItem:
       when they realised they were sometimes in the way of improvement, it was concluded that a more independant organisation
       was needed, and that's how this DSC Community organisation was created.
 
+  - ID: DscDead
+    title: Is DSC Dead?
+    content: |
+      No. PowerShell 7 (since Preview 4) includes Invoke-DscResource for PowerShell resource, cross platform, that does not
+      use an LCM (GA early 2020). New Microsoft Azure solutions are depending on the DSC ecosystem (Azure Policy Guest Configuration,
+      via Azure and Azure Arc, along with other services), and are the fastest growing user of DSC, despite being sometimes transparent to the user.
+      Non-Microsoft solutions have flourished supporting the use of DSC, such as Chef, Puppet, Ansible or AWS Systems Manager.
+      DSC using the LCM in 5.1 is still a valid scenario for those running Windows, and is still supported (although not
+      developped further). Come and ask further questions on the DSC Channel of slack.poshcode.org
+
   - ID : support
     title : Are the DSC Resources from the DSC Resource kit Supported by Microsoft?
     content : |
@@ -27,3 +37,32 @@ faqItem:
       in terms of activity and contributions.
       Now, it's fair to say the community owns the resources and is responsible for their develelopment and release,
       while the DSC team helps to maintain the level of quality and alignment with future evolutions of DSC.
+
+  - ID: BecomeMaintainer
+    title: How do I becomes a DSC Resource maintainer?
+    content: |
+      Anyone can become a maintainer, but for the DSC Community to be reliable, we need to trust our fellow
+      maintainers. To build the trust required to become a maintainer, become a regular contributor first,
+      and having some "skin in the game" may help. Just join us on the Slack channel and talk to us.
+      It's always easier to trust someone we know personally, maybe through conferences,
+      regular user groups, or with other contributions. Also, working for a reputable
+      company we know would punish its employees should they go rogue would probably help.
+
+  - ID: HowToContribute
+    title: How can I contribute?
+    content: |
+      You should not feel the need to be an expert to contribute. Just by reading documentation and raising or fixing issues
+      if something needs correction can help improving the quality and user experience tremendously.
+      Also, you don't need to be a Maintainer to start reviewing code; peer review is
+      about a fresh pair of eyes giving honest feedback. If you're new to it, someone with more experience
+      will still double check, and they'll be grateful you had a first look, saving them
+      time! Have a look at the guidlines on this site! Even this site is on GitHub!
+
+  - ID: BecomeCommittee
+    title: Who can be part of the DSC Community Committee?
+    content: |
+      Anyone, but there's a catch. The goal of the committee is to have a small core group of trusted individuals
+      with the decision power and systems priviledge to maintain the community active and prosper.
+      The current committee is made of top contributors and Microsoft DSC Team members who've been
+      working with the technology and sharing and caring for the community for years. Read more on
+      our https://dsccommunity.org/community/committee page.
