--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -17,7 +17,7 @@ steps:
 - checkout: self
   displayName: 'Checkout repository'
 
-- task: HugoTask@2
+- task: giuliovdev.hugo-extension.hugo-build-task.HugoTask@2
   displayName: 'Generate Hugo site'
   inputs:
     destination: '$(Build.ArtifactStagingDirectory)'
