Fix hugo version

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -21,6 +21,7 @@ steps:
   displayName: 'Generate Hugo site'
   inputs:
     destination: '$(Build.ArtifactStagingDirectory)'
+    hugoVersion: 0.92.2
 
 - task: PublishPipelineArtifact@0
   displayName: 'Publish Hugo site as artifact'
