--- a/data/en/faq.yml
+++ b/data/en/faq.yml
@@ -5,7 +5,7 @@ faqItem:
       The DSC Community is a collective of maintainers, contributors and users of DSC Resources and its ecosystem.
       Currently without a legal structure (but thinking about it), it is just an organisation created to improve
       collaboration between the different actors of the DSC ecosystem. While Microsoft is an important stakeholder,
-      when they realised they were sometimes in the way of improvement, it was concluded that a more independant organisation
+      when they realised they were sometimes in the way of improvement, it was concluded that a more independent organisation
       was needed, and that's how this DSC Community organisation was created.
 
   - ID: DscDead
@@ -16,7 +16,8 @@ faqItem:
       via Azure and Azure Arc, along with other services), and are the fastest growing user of DSC, despite being sometimes transparent to the user.
       Non-Microsoft solutions have flourished supporting the use of DSC, such as Chef, Puppet, Ansible or AWS Systems Manager.
       DSC using the LCM in 5.1 is still a valid scenario for those running Windows, and is still supported (although not
-      developped further). Come and ask further questions on the DSC Channel of slack.poshcode.org
+      developed further). Come and ask further questions on the DSC Channel in the PowerShell Slack (via https://aka.ms/psslack) or Discord 
+      (via https://aka.ms/psdisord) 
 
   - ID : support
     title : Are the DSC Resources from the DSC Resource kit Supported by Microsoft?
@@ -35,7 +36,7 @@ faqItem:
     content : |
       Although some of the resources where originally created by the PowerShell team, as the community grew it took over
       in terms of activity and contributions.
-      Now, it's fair to say the community owns the resources and is responsible for their develelopment and release,
+      Now, it's fair to say the community owns the resources and is responsible for their development and release,
       while the DSC team helps to maintain the level of quality and alignment with future evolutions of DSC.
 
   - ID: BecomeMaintainer
@@ -43,7 +44,7 @@ faqItem:
     content: |
       Anyone can become a maintainer, but for the DSC Community to be reliable, we need to trust our fellow
       maintainers. To build the trust required to become a maintainer, become a regular contributor first,
-      and having some "skin in the game" may help. Just join us on the Slack channel and talk to us.
+      and having some "skin in the game" may help. Just join us on the DSC Slack or Discord channel and talk to us.
       It's always easier to trust someone we know personally, maybe through conferences,
       regular user groups, or with other contributions. Also, working for a reputable
       company we know would punish its employees should they go rogue would probably help.
@@ -56,13 +57,13 @@ faqItem:
       Also, you don't need to be a Maintainer to start reviewing code; peer review is
       about a fresh pair of eyes giving honest feedback. If you're new to it, someone with more experience
       will still double check, and they'll be grateful you had a first look, saving them
-      time! Have a look at the guidlines on this site! Even this site is on GitHub!
+      time! Have a look at the guidelines on this site! Even this site is on GitHub!
 
   - ID: BecomeCommittee
     title: Who can be part of the DSC Community Committee?
     content: |
       Anyone, but there's a catch. The goal of the committee is to have a small core group of trusted individuals
-      with the decision power and systems priviledge to maintain the community active and prosper.
+      with the decision power and systems privilege to maintain the community active and prosper.
       The current committee is made of top contributors and Microsoft DSC Team members who've been
       working with the technology and sharing and caring for the community for years. Read more on
       our https://dsccommunity.org/community/committee page.
