--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -24,7 +24,7 @@ steps:
       pwsh: true
       errorActionPreference: continue
 
-  - task: MrCSharp.hugo-build-task-azure-devops.hugo-build-task.hugo-build-task@1
+  - task: giuliovdev.hugo-extension.hugo-build-task-v2.HugoTask@2
     displayName: "Generate Hugo site"
     inputs:
       destination: "$(Build.ArtifactStagingDirectory)"
