Fix Hugo website to work on v0.135.0 (#220)

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -4,35 +4,45 @@
 # https://aka.ms/yaml
 
 trigger:
-- master
+  - master
 
 pr:
   autoCancel: true
 
 pool:
-  vmImage: 'windows-2019'
+  vmImage: "windows-2019"
 
 steps:
+  - checkout: self
+    displayName: "Checkout repository"
 
-- checkout: self
-  displayName: 'Checkout repository'
+  - task: PowerShell@2
+    name: ResourcesJSON
+    displayName: "Generating Resources JSON from PSGallery"
+    inputs:
+      filePath: "./Get-DscResourceKitInfo.ps1"
+      pwsh: true
+      errorActionPreference: continue
 
-- task: PowerShell@2
-  name: ResourcesJSON
-  displayName: 'Generating Resources JSON from PSGallery'
-  inputs:
-    filePath: './Get-DscResourceKitInfo.ps1'
-    pwsh: true
-    errorActionPreference: continue
+  # - task: giuliovdev.hugo-extension.hugo-build-task-v2.HugoTask@2
+  #   displayName: "Generate Hugo site"
+  #   inputs:
+  #     destination: "$(Build.ArtifactStagingDirectory)"
+  #     hugoVersion: 0.135.0
 
-- task: giuliovdev.hugo-extension.hugo-build-task-v2.HugoTask@2
-  displayName: 'Generate Hugo site'
-  inputs:
-    destination: '$(Build.ArtifactStagingDirectory)'
-    hugoVersion: 0.92.2
+  - pwsh: |
+      $hugoUrl = "https://github.com/gohugoio/hugo/releases/download/v0.135.0/hugo_0.135.0_windows-amd64.zip"
+      $outputPath = ".\hugo.zip"
+      Invoke-WebRequest -Uri $hugoUrl -OutFile $outputPath
+      Expand-Archive -Path $outputPath -DestinationPath ".\hugo"
+    displayName: "Download and Extract Hugo"
 
-- task: PublishPipelineArtifact@0
-  displayName: 'Publish Hugo site as artifact'
-  inputs:
-    artifactName: 'dsccommunity'
-    targetPath: '$(Build.ArtifactStagingDirectory)'
+  - pwsh: |
+      .\hugo\hugo.exe --source "$(System.DefaultWorkingDirectory)" --destination "$(Build.ArtifactStagingDirectory)" --printI18nWarnings --printPathWarnings --logLevel info
+    displayName: "Build Hugo Site"
+
+  - task: PublishPipelineArtifact@0
+    displayName: "Publish Hugo site as artifact"
+    inputs:
+      artifactName: "dsccommunity"
+      targetPath: "$(Build.ArtifactStagingDirectory)"
