Update Copyright message
Copyright notices should ideally include the start and current year 
It's also preferred for this not to need updating yearly and on page load this be auto-updated for the reader

--- a/config.toml
+++ b/config.toml
@@ -26,7 +26,7 @@ title = "DSC Community"
 dateFormat = "2 January 2006"
 home = "Home"
 logo = "DSC Community and Resource Kit"
-copyright = "Copyright 2025 the dsccommunity.org contributors."
+copyright = "Copyright 2019 to 2025 - the dsccommunity.org contributors."
 
 # navigation
 [Languages.en.menu]
